--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-bootstrap-icons": "^1.8.2",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
+    "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
     "sass": "^1.49.8",
     "web-vitals": "^2.1.4"
